src/App.css
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');

html {
  --bg-white: white;
  --bg-black: black;
  --cl-white: black;
  --cl-black: white;
  --cl-gutter: #F0F0F0;
  background: var(--cl-gutter);
}

.App {
  background: var(--cl-gutter);
  font-family: "Manrope", sans-serif;
  font-weight: 300;
  font-size: medium;
  text-align: center;
  color: var(--cl-white);
}

.bg-white {
  background: var(--bg-white);
  color: var(--cl-white) !important;
}

.bg-black {
  background: var(--bg-black);
  color: var(--cl-black) !important;
}

.bg-image {
  color: var(--cl-black) !important;
  text-shadow: 0px 0px 3px black;
}

